app/assets/stylesheets/application.css.scss
/*
 * This is a manifest file that'll be compiled into application.css, which will include all the files
 * listed below.
 *
 * Any CSS and SCSS file within this directory, lib/assets/stylesheets, vendor/assets/stylesheets,
 * or any plugin's vendor/assets/stylesheets directory can be referenced here using a relative path.
 *
 * You're free to add application-wide styles to this file and they'll appear at the bottom of the
 * compiled file so the styles you add here take precedence over styles defined in any other CSS/SCSS
 * files in this directory. Styles in this file should be added after the last require_* statement.
 * It is generally better to create a new file per style scope.
 *
 *= require_self
 */

@import 'bootstrap-sprockets';
@import 'variables';
@import 'mixins';
@import 'bootstrap';
@import 'bootswatch';

html, body {
  height: 100%;
}

div[data-react-class="Root"] {
  height: 100%;

  & > div {
    height: 100%;
  }
}

.navbar {
  .app-logo {
    .navbar-brand {
      @include no-select();

      color: $gray-light;
      margin-left: 0 !important;

      &:hover {
        color: $gray-light;
      }
    }
  }

  .navbar-nav {
    margin-bottom: 0;

    .header-btn {
      @extend .btn-success;
      @extend .text-center;

      font-weight: bolder;
      margin: 1px;

      &:hover, &:active, &:focus {
        background-color: darken($brand-success, 10%) !important;
      }
    }
  }
}

.note-list {
  @extend .col-xs-12;
  @extend .col-sm-8;
  @extend .col-sm-offset-2;

  .note {
    @extend .list-group-item;
    @include shadow-box();

    margin-bottom: 21px;

    &:last-child {
      margin-bottom: 21px !important;
    }

    &:hover {
      background-color: $gray-lightest !important;
    }

    .note-header {
      @extend .text-muted;

      h6 {
        display: inline-block;
      }

      button {
        @extend h1;
        @extend .pull-right;

        margin: -5px;
        background-color: transparent;
        background-repeat: no-repeat;
        border: none;
        cursor: pointer;
        overflow: hidden;
        outline: none;
      }
    }

    hr {
      margin: 10px -15px;
    }

    .note-body {
      @extend .list-group-item-text;
    }
  }
}

.note-editor {
  @extend .col-xs-12;
  @include calc(height, '100% - 140px');

  @media (max-width: $screen-xs-max) {
    @include calc(height, '100% - 230px');
  }

  h4 {
    @extend .text-center;

    font-weight: normal;
    margin-bottom: 21px;
  }

  .editor {
    @extend .col-xs-6;
    @extend .pull-left;

    width: 50%;
    height: 100%;

    textarea {
      @extend .form-control;

      width: 100%;
      height: 100%;
      resize: none;
    }

    @media (max-width: $screen-xs-max) {
      width: 100%;
    }
  }

  .preview {
    @extend .hidden-xs;
    @extend .col-xs-6;
    @extend .pull-right;

    width: 50%;
    height: 100%;

    .output {
      @extend .well;

      width: 100%;
      height: 100%;
      border: 1px solid $input-border;
      overflow: scroll;
    }
  }
}

